--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongodb": "^4.12.1"
+    "mongodb": "^4.12.1",
+    "uuid": "^9.0.0"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node ./src/index.js"
   }
 }
